--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,25 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item android:id="@+id/nav_item_uno"
-            android:icon="@drawable/abc_vector_test"
+            android:icon="@drawable/inicio"
             android:title="Inicio"/>
     </group>
 
     <item android:title="Registros">
         <menu>
-            <item android:id="@+id/nav_item_dos_uno"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Ingreso"/>
-            <item android:id="@+id/nav_item_dos_dos"
-                android:icon="@drawable/abc_vector_test"
-                android:title="Salida"/>
+            <item
+                android:id="@+id/nav_item_dos_uno"
+                android:icon="@drawable/ingreso"
+                android:title="Ingreso" />
+            <item
+                android:id="@+id/nav_item_dos_dos"
+                android:icon="@drawable/salir"
+                android:title="Salida" />
         </menu>
     </item>
 
     <item android:title="Permisos">
         <menu>
             <item android:id="@+id/nav_item_tres"
-                android:icon="@drawable/abc_vector_test"
+                android:icon="@drawable/permisos"
                 android:title="Permisos"/>
         </menu>
     </item>
@@ -28,10 +30,10 @@
     <item android:title="Consultas">
         <menu>
             <item android:id="@+id/nav_item_cuatro_uno"
-                android:icon="@drawable/abc_vector_test"
+                android:icon="@drawable/busquedaingreso"
                 android:title="Ingreso"/>
             <item android:id="@+id/nav_item_cuatro_dos"
-                android:icon="@drawable/abc_vector_test"
+                android:icon="@drawable/busquedaingreso"
                 android:title="Salida"/>
         </menu>
     </item>
@@ -40,14 +42,14 @@
     <item android:title="Nosotros">
         <menu>
             <item android:id="@+id/nav_item_cinco"
-                android:icon="@drawable/abc_vector_test"
+                android:icon="@drawable/nosotros"
                 android:title="Acerca de Nosotros"/>
         </menu>
     </item>
 
     <group>
         <item android:id="@+id/nav_item_seis"
-            android:icon="@drawable/abc_vector_test"
+            android:icon="@drawable/salida"
             android:title="Salir"/>
     </group>
 
