--- a/app/src/main/res/layout/activity_registro_ingreso.xml
+++ b/app/src/main/res/layout/activity_registro_ingreso.xml
@@ -178,11 +178,10 @@
         android:textColor="@android:color/black"
         android:layout_marginBottom="8dp" />
 
-    <EditText
-        android:id="@+id/etMicromovilidad"
+    <Spinner
+        android:id="@+id/spinnerMicromovilidad"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:hint="Ingrese el tipo de movilidad" />
+        android:layout_height="48dp" />
 
     <!-- Botones Ingreso y Regresar -->
     <androidx.appcompat.widget.LinearLayoutCompat
