--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,7 +23,10 @@
         <menu>
             <item android:id="@+id/nav_item_tres"
                 android:icon="@drawable/permisos"
-                android:title="Permisos"/>
+                android:title="Ingreso"/>
+            <item android:id="@+id/nav_item_cuatro"
+                android:icon="@drawable/permisos"
+                android:title="Salida"/>
         </menu>
     </item>
 
