--- a/app/src/main/res/layout/activity_recuperar_contrasena.xml
+++ b/app/src/main/res/layout/activity_recuperar_contrasena.xml
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="PREPARATÉ PARA EL AHORA"
-        android:textColor="#033657"
+        android:textColor="#359712"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -130,7 +130,7 @@
         android:layout_marginStart="180dp"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="180dp"
-        android:text="Atrás"
+        android:text="⬅️ Atrás"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
